<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/grafico_xy"
        style="@style/grafico"
        android:layout_width="180dp"
        android:layout_height="178dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/fuerza_normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.469"
        app:layout_constraintStart_toStartOf="parent">

    </LinearLayout>

    <TextView
        android:id="@+id/suma"
        style="@style/cuadro_texto_c"
        app:layout_constraintBottom_toBottomOf="@+id/fuerza_lateral"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/fuerza_lateral" />

    <TextView
        android:id="@+id/fuerza_normal"
        style="@style/cuadro_texto_c"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/velocidad"
        app:layout_constraintEnd_toStartOf="@+id/fuerza_lateral"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- seleción de velocidad  -->
    <TextView
        android:id="@+id/fuerza_lateral"
        style="@style/cuadro_texto_c"
        app:layout_constraintBottom_toBottomOf="@+id/fuerza_normal"
        app:layout_constraintEnd_toStartOf="@+id/suma"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/fuerza_normal" />


    <TextView
        android:id="@+id/textVelocidad"
        style="@style/etiqueta"
        android:layout_marginEnd="8dp"
        android:text="@string/vel_motor"
        app:layout_constraintEnd_toStartOf="@+id/velocidad"
        app:layout_constraintTop_toTopOf="@+id/velocidad" />

    <SeekBar
        android:id="@+id/velocidad"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="233dp"
        android:layout_height="32dp"
        android:layout_marginTop="364dp"
        android:layout_marginEnd="32dp"
        android:max="5"
        android:progress="4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />




    <!-- botones del fotodiodo  -->

    <ToggleButton
        android:id="@+id/fotodiodo_down"
        style="@style/boton_cabeza"
        android:layout_marginStart="40dp"
        android:layout_marginTop="@dimen/espacio_vertical"
        android:textColor="@color/colorPrimary"
        android:textOff="@string/text_off"
        android:textOn="@string/text_on"
        app:layout_constraintStart_toStartOf="@+id/fotodiodo_left"
        app:layout_constraintTop_toBottomOf="@+id/fotodiodo_left" />

    <ToggleButton
        android:id="@+id/fotodiodo_up"
        style="@style/boton_cabeza"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="@dimen/espacio_vertical"
        android:textColor="@color/colorPrimary"
        android:textOff="@string/text_off"
        android:textOn="@string/text_on"
        app:layout_constraintBottom_toTopOf="@+id/fotodiodo_left"
        app:layout_constraintStart_toStartOf="@+id/fotodiodo_left" />

    <ToggleButton
        android:id="@+id/fotodiodo_left"
        style="@style/boton_cabeza"
        android:layout_marginEnd="@dimen/espacio_botones_corto"
        android:textColor="@color/colorPrimary"
        android:textOff="@string/text_off"
        android:textOn="@string/text_on"
        app:layout_constraintBottom_toBottomOf="@+id/laser_right"
        app:layout_constraintEnd_toStartOf="@+id/fotodiodo_right" />

    <!-- botones del laser  -->
    <ToggleButton
        android:id="@+id/fotodiodo_right"
        style="@style/boton_cabeza"
        android:textColor="@color/colorPrimary"
        android:textOff="@string/text_off"
        android:textOn="@string/text_on"
        app:layout_constraintBottom_toBottomOf="@+id/fotodiodo_left"
        app:layout_constraintEnd_toEndOf="@+id/velocidad" />

    <ToggleButton
        android:id="@+id/laser_down"
        style="@style/boton_cabeza"
        android:layout_marginStart="@dimen/espacio_botones_corto"
        android:layout_marginTop="@dimen/espacio_vertical"
        android:textColor="@color/colorPrimary"
        android:textOff="@string/text_off"
        android:textOn="@string/text_on"
        app:layout_constraintStart_toStartOf="@+id/laser_left"
        app:layout_constraintTop_toBottomOf="@+id/laser_left" />

    <ToggleButton
        android:id="@+id/laser_up"
        style="@style/boton_cabeza"

        android:layout_marginStart="@dimen/espacio_botones_corto"
        android:layout_marginBottom="@dimen/espacio_vertical"
        android:textColor="@color/colorPrimary"
        android:textOff="@string/text_off"
        android:textOn="@string/text_on"
        app:layout_constraintBottom_toTopOf="@+id/laser_left"
        app:layout_constraintStart_toStartOf="@+id/laser_left" />

    <ToggleButton
        android:id="@+id/laser_left"
        style="@style/boton_cabeza"
        android:layout_marginTop="@dimen/botones_velocidad"
        android:layout_marginEnd="@dimen/espacio_botones_corto"
        android:textColor="@color/colorPrimary"
        android:textOff="@string/text_off"
        android:textOn="@string/text_on"
        app:layout_constraintEnd_toStartOf="@+id/laser_right"
        app:layout_constraintTop_toBottomOf="@+id/velocidad" />

    <ToggleButton
        android:id="@+id/laser_right"
        style="@style/boton_cabeza"
        android:layout_marginEnd="@dimen/espacio_botones_corto"
        android:textColor="@color/colorPrimary"
        android:textOff="@string/text_off"
        android:textOn="@string/text_on"
        app:layout_constraintBottom_toBottomOf="@+id/laser_left"
        app:layout_constraintEnd_toStartOf="@+id/fotodiodo_left" />


</androidx.constraintlayout.widget.ConstraintLayout>